--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <!-- <script src="https://unpkg.com/rxjs@5.4.2/bundles/Rx.min.js"></script> -->
     <title>Document</title>
   </head>
   <body>
     <button class="btn btn-default">Fetch User</button>
     <hr />
+    <p id="demo"></p>
     <div></div>
 
-    <script src="callback.js"></script>
+    <!-- <script src="callback.js"></script> -->
     <!-- <script src="promise.js"></script> -->
     <!-- <script src="rxjs.js"></script> -->
-    <!-- <script src="async-await.js"></script> -->
+    <script src="async-await.js"></script>
   </body>
 </html>
